First iteration of CI with appveyor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,25 @@
 cmake_minimum_required(VERSION 3.1)
 
-project(expression-fetcher-test)
+project(expression-fetcher)
+enable_testing()
+
+SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY
+        ${PROJECT_BINARY_DIR}/bin
+        CACHE PATH
+        "Single Directory for all"
+    )
+
+SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY
+        ${PROJECT_BINARY_DIR}/bin
+        CACHE PATH
+        "Single Directory for all"
+    )
+
+SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY
+        ${PROJECT_BINARY_DIR}/lib
+        CACHE PATH
+        "Single Directory for all"
+    )
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -17,11 +36,5 @@ elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
 endif()
 
 include_directories(lib/)
-set(SOURCE lib/expression_fetcher.h 
-    src/unittests.cpp 
-    src/test_dump_types.cpp 
-    src/test_dump_expressions.cpp 
-    src/test_dump_corner_case.cpp 
-    src/main.cpp)
 
-add_executable(${PROJECT_NAME} ${SOURCE})
+add_subdirectory( src/unittests build/unittests )
