--- a/src/unittests/CMakeLists.txt
+++ b/src/unittests/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.1)
 
 project(expression-fetcher-unittests)
 
-include_directories(/)
+include_directories(.)
 set(SOURCES
     unittests.cpp 
     main.cpp
