#3 Platform should be checked

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,26 @@ elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wno-unused-function -pedantic")
 endif()
 
+if ("${TARGET_CPU}" STREQUAL "amd64")
+    set (CMAKE_SIZEOF_VOID_P 8)
+
+    set_property (GLOBAL PROPERTY FIND_LIBRARY_USE_LIB64_PATHS TRUE)
+    set_property (GLOBAL PROPERTY FIND_LIBRARY_USE_LIB32_PATHS FALSE)
+
+elseif ("${TARGET_CPU}" STREQUAL "x86")
+    set (CMAKE_SIZEOF_VOID_P 4)
+
+    set_property (GLOBAL PROPERTY FIND_LIBRARY_USE_LIB64_PATHS FALSE)
+    set_property (GLOBAL PROPERTY FIND_LIBRARY_USE_LIB32_PATHS TRUE)
+
+    if (GCC)
+        set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32")
+        set (CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} -m32")
+    endif ()
+else ()
+    message (FATAL_ERROR "Unsupported CPU: ${TARGET_CPU}")
+endif ()
+
 include_directories(lib/)
 
 add_subdirectory( src/unittests build/unittests )
