Start working on condition evaluation. Test are written.

--- a/src/unittests/CMakeLists.txt
+++ b/src/unittests/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES
     tests/test_dump_types.cpp 
     tests/test_dump_expressions.cpp 
     tests/test_dump_corner_case.cpp 
+    tests/test_eval_condition.cpp 
 )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
